SQL-Fehlermeldungen ohne Default-Übersetzung verarbeiten